# dias-rag

./: README.md  SPECIFICATION.md  pyproject.toml
src/: __init__.py  cli.py  indexer.py  search.py  utils.py
tests/: __init__.py  test_cli.py  test_indexer.py  test_search.py  test_utils.py
tests/fixtures/: sample1.md  sample2.md  sample3.md
